# signalforge

./: .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  LIBRARY_ISSUES.md  LICENSE  README.md  README.old.md  benchmark-result.md  build.js  package-lock.json  package.json  react-native.config.js  signalforge.podspec  tsconfig.json
.github/workflows/: ci.yml  release.yml
benchmarks/: compare.ts  comprehensive.ts  performance.ts  standalone.ts
docs/: API-QUICK-REFERENCE.md  API.md  android-integration.md  architecture.md  benchmark-methodology.md  getting-started.md  ios-integration.md  migration-guide.md  native-integration.md  native-overview.md  react-native-guide.md  release-checklist.md  ssr-nextjs.md
examples/SignalForgeReactNativeExample/android/: settings.gradle
examples/SignalForgeReactNativeExample/android/app/: build.gradle
examples/SignalForgeReactNativeExample/android/app/src/main/java/com/signalforgereactnativeexample/: MainActivity.kt  MainApplication.kt
examples/SignalForgeReactNativeExample/android/app/src/main/res/values/: strings.xml
examples/react-store/: README.md  index.html  package-lock.json  package.json
examples/react-store/src/: App.tsx  style.css
examples/sf-nextjs/: .gitignore  README.md  SEO-GUIDE.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
examples/sf-nextjs/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
examples/sf-nextjs/app/components/: DemoLayout.tsx
examples/sf-nextjs/app/demos/: metadata.ts
examples/sf-nextjs/app/demos/array/: page.tsx
examples/sf-nextjs/app/demos/basic/: page.tsx
examples/sf-nextjs/app/demos/batch/: page.tsx
examples/sf-nextjs/app/demos/benchmark/: layout.tsx  page.tsx
examples/sf-nextjs/app/demos/bigdata/: page.tsx
examples/sf-nextjs/app/demos/cart/: layout.tsx  page.tsx
examples/sf-nextjs/app/demos/chains/: page.tsx
examples/sf-nextjs/app/demos/collaboration/: page.tsx
examples/sf-nextjs/app/demos/comparison/: layout.tsx  page.tsx
examples/sf-nextjs/app/demos/computed/: page.tsx
examples/sf-nextjs/app/demos/dashboard/: layout.tsx  page.tsx
examples/sf-nextjs/app/demos/devtools/: page.tsx
examples/sf-nextjs/app/demos/effects/: page.tsx
examples/sf-nextjs/app/demos/form/: page.tsx
examples/sf-nextjs/app/demos/hooks/: page.tsx
examples/sf-nextjs/app/demos/persistent/: page.tsx
examples/sf-nextjs/app/demos/plugin/: layout.tsx  page.tsx
examples/sf-nextjs/app/demos/subscribe/: page.tsx
examples/sf-nextjs/app/demos/timetravel/: page.tsx
examples/sf-nextjs/app/demos/todo/: page.tsx
examples/sf-nextjs/app/demos/untrack/: page.tsx
examples/sf-nextjs/app/docs/: DocsShell.tsx  page.tsx
examples/sf-nextjs/app/docs/api/: page.tsx
examples/sf-nextjs/app/docs/benchmarks/: page.tsx
examples/sf-nextjs/app/docs/examples/: page.tsx
examples/sf-nextjs/app/docs/migration/: page.tsx
examples/sf-nextjs/app/docs/production/: page.tsx
examples/sfReactNative/: .eslintrc.js  .gitkeep  App.tsx  DEMO_GUIDE.md  DOCUMENTATION_INDEX.md  FEATURES.md  PROJECT_ANALYSIS.md  QUICK_START.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  app.json  fix-setup.ps1  metro.config.js  package-lock.json  package.json
examples/sfReactNative/android/: settings.gradle
examples/sfReactNative/android/app/: build.gradle
examples/sfReactNative/android/app/src/main/java/com/sfreactnative/: MainActivity.kt  MainApplication.kt
examples/sfReactNative/android/app/src/main/res/values/: strings.xml
examples/sfReactNative/ios/: Podfile
examples/sfReactNative/ios/sfReactNative/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
examples/sfReactNative/ios/sfReactNative.xcodeproj/: project.pbxproj
examples/sfReactNative/ios/sfReactNative.xcodeproj/xcshareddata/xcschemes/: sfReactNative.xcscheme
examples/sfReactNative/screens/: ArraySignalScreen.tsx  BasicSignalScreen.tsx  BatchUpdatesScreen.tsx  BigDataScreen.tsx  ClassComponentScreen.tsx  ComputedSignalScreen.tsx  CrossScreenCartScreen.tsx  CrossScreenProfileScreen.tsx  CrossScreenStoreScreen.tsx  DevToolsScreen.tsx  EffectsScreen.tsx  FormValidationScreen.tsx  PersistentSignalScreen.tsx  ReactHooksScreen.tsx  ShoppingCartScreen.tsx  SubscribeScreen.tsx  TimeTravelScreen.tsx  TodoAppScreen.tsx  UntrackScreen.tsx
examples/sfReactNative/shared/: globalState.ts
scripts/: check-size.js  package-contents-test.mjs  package-smoke-test.mjs
src/: index.ts
src/core/: batcher.ts  constants.ts  minimal.ts  performance-monitor.ts  pluginManager.ts  plugins.ts  store.ts  storeApi.ts
src/devtools/: SignalGraphVisualizer.tsx  inspector.ts  nativeBridge.ts  performanceProfiler.ts  runtime.ts
src/devtools/ui/: DevToolsPanel.tsx  LogViewer.tsx  PerformanceTab.tsx  TimeTravelTimeline.tsx
src/entries/: core.ts  devtools.ts  plugins.ts  react.ts  utils.ts
src/hooks/: useSignal.ts  useSignalEffect.ts
src/native/: CMakeLists.txt  NativeSignalForge.ts  index.ts  jsiBridge.ts  jsiStore.cpp  jsiStore.h  setup.ts
src/native/ios/: SignalForge.mm
src/plugins/: logger.ts  timeTravel.ts
src/react/: classSupport.tsx
src/types/: react-native.d.ts
src/utils/: benchmark.ts  index.ts  storageAdapter.ts
tests/: api-snapshot.test.ts  architecture.test.ts  batching.test.ts  devtools-panel.test.ts  devtools-runtime.test.ts  devtools.test.ts  hooks.test.tsx  memory.test.ts  persistence.test.ts  react-native-integration.test.ts  react-runtime.test.tsx  regression.test.ts  ssr.test.tsx  storageAdapter.test.ts  store.test.ts  subscription.test.ts  types.test.ts  useSignalEffect.test.ts
